# parser

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.example.yml  parsed_resume.json  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: job_postings.py  resumes.py
app/db/: client.py  repository.py
app/detectors/: __init__.py  boundaries.py  section_detector.py
app/events/: __init__.py  publisher.py
app/extractors/: __init__.py  docx_extractor.py  pdf_extractor.py
app/job/: __init__.py  html.py  parser.py  pipeline.py  quality.py
app/parsers/: __init__.py  certifications_parser.py  contact_parser.py  education_parser.py  experience_parser.py  generic_list_parser.py  languages_parser.py  projects_parser.py  skills_parser.py  summary_parser.py
app/pipeline/: __init__.py  resume_pipeline.py
app/preprocess/: __init__.py  cleaner.py  layout.py
app/quality/: __init__.py  checker.py  fallback.py
app/schemas/: __init__.py  content.py  contract.py  job_posting.py  response.py
app/utils/: __init__.py  fuzzy.py  regexes.py  text.py
docs/: architecture.puml  glossary_uk.md  integration_events.md  service_explanation.md
scripts/: parse_pdf.py
tests/: test_certifications_parser.py  test_contact_parser.py  test_content_contract.py  test_document_flags.py  test_education_parser.py  test_event_publisher.py  test_experience_parser.py  test_generic_list_parser.py  test_job_posting_pipeline.py  test_preprocess_cleaner.py  test_quality_checker.py  test_response_schema.py  test_section_detector.py  test_skills_parser.py
(+23 files in other folders)
