[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-parser-service"
version = "0.1.0"
description = "Rules-first resume parsing microservice built with FastAPI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aio-pika>=9.4.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyMuPDF>=1.24.0",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.9",
  "rapidfuzz>=3.9.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
